# odOcr

./: .gitignore  README.md  pyproject.toml
.opencode/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.converge.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md  speckit.taskstoissues.md
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
odOcr/: __main__.py  cli.py  clipboard.py  config.py  hotkey.py  image.py  models.py  ocr.py  output.py  tray.py
specs/001-ocr-clipboard-app/: data-model.md  design.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ocr-clipboard-app/checklists/: requirements.md
specs/001-ocr-clipboard-app/contracts/: cli.md
tests/: test_cli.py  test_image.py  test_models.py  test_ocr.py  test_output.py
